# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "netcheck"
version = "0.1.0"
edition = "2021"
authors = ["Carlos Neto <carlos.neto.dev@gmail.com>"]
categories = ["command-line-utilities"]
description = "CLI tool to check if a IP is public or private"
homepage = "https://github.com/c-neto/netcheck/README.md"
repository = "https://github.com/c-neto/netcheck"
license = "MIT/Apache-2.0"

[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary. 
